Fixed Jumping

--- a/frontend/src/pages/Log In/LogIn.css
+++ b/frontend/src/pages/Log In/LogIn.css
@@ -2,10 +2,9 @@
     display: flex;
     min-width:  22rem; 
     min-height: 30rem; 
-    padding: 0.5rem;
+    padding: 3rem;
     flex-direction: column;
     align-items: center;
     gap: 3vh;
     flex-shrink: 0; 
-    margin-top: 1vh;
   }
