--- a/frontend/src/pages/Sign In/SingIn.css
+++ b/frontend/src/pages/Sign In/SingIn.css
@@ -1,7 +1,7 @@
   .signin-input-container {
     min-width:  22rem; 
     min-height: 30rem; 
-    padding: 0.5rem;
+    padding: 2rem;
     gap: 1vh;
     flex-direction: column;
     align-items: center;
